Add timetables and delays
